# daft-ops-core

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/daft_ops/: __init__.py  base.py  cls.py
src/daft_ops/op/text/: trans.py
tests/: test_poc.py
